# torch_astype

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-test.yml
src/torch_astype/: __init__.py  override_torch.py  parse.py
tests/: test_astype.py  test_parse.py
